// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer for rounds should add moves 1`] = `
Object {
  "error_progress": false,
  "in_progress": false,
  "p1_move": 1,
  "p2_move": undefined,
  "prev_rounds": Array [],
  "winner": false,
}
`;

exports[`Reducer for rounds should add moves 2`] = `
Object {
  "error_progress": false,
  "in_progress": false,
  "p1_move": undefined,
  "p2_move": 2,
  "prev_rounds": Array [],
  "winner": false,
}
`;

exports[`Reducer for rounds should add prev round 1`] = `
Object {
  "p1_move": undefined,
  "p2_move": undefined,
  "prev_rounds": Array [
    Object {
      "name": "Player 2",
      "winner": 2,
    },
    Object {
      "moves": Array [],
      "name": "Player 1",
      "winner": 2,
    },
  ],
  "winner": false,
}
`;

exports[`Reducer for rounds should give initial state 1`] = `
Object {
  "error_progress": false,
  "in_progress": false,
  "p1_move": undefined,
  "p2_move": undefined,
  "prev_rounds": Array [],
  "winner": false,
}
`;
